--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -39,6 +39,8 @@ koin-android = { group = "io.insert-koin", name = "koin-android", version.ref = 
 koin-androidx-compose = { group = "io.insert-koin", name = "koin-androidx-compose", version.ref = "koin" }
 lottie = { module = "com.airbnb.android:lottie-compose", version = "6.4.0" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout-compose", version.ref = "constraintlayout" }
+datastore = { module = "androidx.datastore:datastore-preferences", version = "1.1.1" }
+
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
