--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -32,6 +32,7 @@ androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-man
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 navigation = { group = "androidx.navigation", name = "navigation-compose", version.ref = "nav" }
+animation = { group = "androidx.compose.animation", name = "animation", version = "1.6.8" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
 logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "logging-interceptor" }
@@ -40,6 +41,9 @@ koin-androidx-compose = { group = "io.insert-koin", name = "koin-androidx-compos
 lottie = { module = "com.airbnb.android:lottie-compose", version = "6.4.0" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout-compose", version.ref = "constraintlayout" }
 datastore = { module = "androidx.datastore:datastore-preferences", version = "1.1.1" }
+
+
+coil = { module = "io.coil-kt:coil-compose", version = "2.6.0" }
 
 
 [plugins]
